fixed text align

--- a/src/components/servicescomp/ServicesComp.scss
+++ b/src/components/servicescomp/ServicesComp.scss
@@ -71,7 +71,7 @@ $background-gradient--secondary: linear-gradient(
     margin-top: 20px;
   }
 
-  #servicesPageTextBottom {
+  #servicesTextBottom {
     margin-bottom: 32px;
     @media (width > 480px) {
       text-align: center;
